[project]
name = "two-banded-puffbird"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scipy>=1.15.2",
    "yfinance>=0.2.58",
    "lxml>=5.4.0",
]
