[project]
name = "two-banded-puffbird"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "scipy>=1.15.2",
    "yfinance>=0.2.58",
    "lxml>=5.4.0",
    "ruff>=0.11.9",
    "pre-commit>=4.2.0",
]

[tool.ruff]
# Exclude tests directories
exclude = ["**/tests/*"]
line-length = 110

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
select = ["E", "F", "W", "I"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with 4 spaces
indent-style = "space"
line-ending = "auto"
